--- a/apache-airflow-docker-compose.yaml
+++ b/apache-airflow-docker-compose.yaml
@@ -49,7 +49,7 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider distributions you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:3.0.3}
+  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:latest}
   # build: .
   environment:
     &airflow-common-env
@@ -85,11 +85,11 @@ x-airflow-common:
     postgres:
       condition: service_healthy
   networks:
-      - apache-airflow-network
+      - airflow-network
 
 services:
   postgres:
-    container_name: apache-airflow-postgres
+    container_name: airflow-postgres
     image: postgres:13
     environment:
       POSTGRES_USER: airflow
@@ -98,7 +98,7 @@ services:
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
     networks:
-      - apache-airflow-network
+      - airflow-network
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 10s
@@ -110,11 +110,11 @@ services:
     # Redis is limited to 7.2-bookworm due to licencing change
     # https://redis.io/blog/redis-adopts-dual-source-available-licensing/
     image: redis:7.2-bookworm
-    container_name: apache-airflow-redis
+    container_name: airflow-redis
     expose:
       - 6379
     networks:
-      - apache-airflow-network
+      - airflow-network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -125,7 +125,7 @@ services:
 
   airflow-apiserver:
     <<: *airflow-common
-    container_name: apache-airflow-apiserver
+    container_name: airflow-apiserver
     command: api-server
     ports:
       - "8080:8080"
@@ -143,7 +143,7 @@ services:
 
   airflow-scheduler:
     <<: *airflow-common
-    container_name: apache-airflow-scheduler
+    container_name: airflow-scheduler
     command: scheduler
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
@@ -159,7 +159,7 @@ services:
 
   airflow-dag-processor:
     <<: *airflow-common
-    container_name: apache-airflow-dag-processor
+    container_name: airflow-dag-processor
     command: dag-processor
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type DagProcessorJob --hostname "$${HOSTNAME}"']
@@ -175,7 +175,7 @@ services:
 
   airflow-worker:
     <<: *airflow-common
-    container_name: apache-airflow-worker
+    container_name: airflow-worker
     command: celery worker
     healthcheck:
       # yamllint disable rule:line-length
@@ -201,10 +201,10 @@ services:
 
   airflow-triggerer:
     <<: *airflow-common
-    container_name: apache-airflow-triggerer
+    container_name: airflow-triggerer
     command: triggerer
     networks:
-      - apache-airflow-network
+      - airflow-network
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
       interval: 30s
@@ -219,7 +219,7 @@ services:
 
   airflow-init:
     <<: *airflow-common
-    container_name: apache-airflow-init
+    container_name: airflow-init
     entrypoint: /bin/bash
     # yamllint disable rule:line-length
     command:
@@ -312,7 +312,7 @@ services:
 
   airflow-cli:
     <<: *airflow-common
-    container_name: apache-airflow-cli
+    container_name: airflow-cli
     profiles:
       - debug
     environment:
@@ -331,14 +331,14 @@ services:
   # See: https://docs.docker.com/compose/profiles/
   flower:
     <<: *airflow-common
-    container_name: apache-airflow-flower
+    container_name: airflow-flower
     command: celery flower
     profiles:
       - flower
     ports:
       - "5555:5555"
     networks:
-      - apache-airflow-network
+      - airflow-network
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:5555/"]
       interval: 30s
@@ -356,6 +356,6 @@ volumes:
 
 
 networks:
-  apache-airflow-network:
+  airflow-network:
     name: lis-network
     external: true
