created docker compose include to create a common starting docker compose file, created folders for each application, ciso-dispatcher depends now on both ciso-backend and redpanda-0, added healtcheck to redpanda-0, all application images point to latest, add lis-dev.sh script as experiment

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Locally created folders/files when executing Airflow and CISO for the first time
+./airflow/logs/
+./airflow/dags/
+./airflow/plugins/
+./airflow/dag_processor/
+./airflow/.env
+
+./ciso/db/
+./ciso/caddy_data/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
