--- a/ciso/docker-compose.yml
+++ b/ciso/docker-compose.yml
@@ -89,6 +89,8 @@ services:
     depends_on:
       backend:
         condition: service_healthy
+      redpanda-0:
+        condition: service_healthy
     restart: always
     environment:
       - DEBUG=True
