--- a/redpanda/docker-compose.yml
+++ b/redpanda/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       # Tells Seastar (the framework Redpanda uses under the hood) to use 1 core on the system.
       - --smp 1
       - --default-log-level=info
-    image: docker.redpanda.com/redpandadata/redpanda:v25.1.8
+    image: docker.redpanda.com/redpandadata/redpanda:latest
     container_name: redpanda-0
     volumes:
       - redpanda-0:/var/lib/redpanda/data
@@ -43,9 +43,15 @@ services:
       - 18082:18082
       - 19092:19092
       - 19644:9644
+    healthcheck:
+      test: ["CMD-SHELL", "rpk cluster info || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
   console:
     container_name: redpanda-console
-    image: docker.redpanda.com/redpandadata/console:v3.1.2
+    image: docker.redpanda.com/redpandadata/console:latest
     networks:
       - redpanda_network
     entrypoint: /bin/sh
